--- a/main.scss
+++ b/main.scss
@@ -10,4 +10,4 @@
 @import "layout/header";
 @import "layout/grid";
 @import "layout/navigation";
-@import "layour/footer";
+@import "layout/footer";
